--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=9000
-logging.level.org.springframework.security=TRACE
-logging.level.org.springframework.security.oauth2=TRACE
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
 
 spring.datasource.url = jdbc:mariadb://localhost:3306/tutorialoauth2?createDatabaseIfNotExist=true
-spring.datasource.username = username
-spring.datasource.password = password
+spring.datasource.username = root
+spring.datasource.password = 123456
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 
@@ -15,8 +15,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.security.oauth2.client.registration.google-idp.provider=google
-spring.security.oauth2.client.registration.google-idp.client-id=${GOOGLE_CLIENT_ID:your_client_id}
-spring.security.oauth2.client.registration.google-idp.client-secret=${GOOGLE_CLIENT_SECRET:your_client_secret}
+spring.security.oauth2.client.registration.google-idp.client-id=${GOOGLE_CLIENT_ID:891357445-l255ti0ehtvpnp0qdeuneli1me7b3bl9.apps.googleusercontent.com}
+spring.security.oauth2.client.registration.google-idp.client-secret=${GOOGLE_CLIENT_SECRET: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}
 spring.security.oauth2.client.registration.google-idp.scope=openid, https://www.googleapis.com/auth/userinfo.profile, https://www.googleapis.com/auth/userinfo.email
 spring.security.oauth2.client.registration.google-idp.client-name=oauth2-tutorial-client
 spring.security.oauth2.client.provider.google.user-name-attribute=email
@@ -31,3 +31,6 @@ spring.security.oauth2.client.provider.google.user-name-attribute=email
 #http://localhost:9000/login/oauth2/code/google-idp
 #
 #https://oauthdebugger.com/debug
+
+#Client ID 891357445-l255ti0ehtvpnp0qdeuneli1me7b3bl9.apps.googleusercontent.com
+#Client secret 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
